--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <dv Class="link_container">
         <ul>
         	<li Class="link">
-             <a href="#" >Landing</a>
+             <a href="section.html" >Landing</a>
           </li>
           <li Class="link">
              <a href="#" >Home</a> 
